# egile-researcher

./: .env.example  MCP_SETUP.md  MCP_SETUP_NEW.md  README.md  pyproject.toml
docs/: api.md  configuration.md  sources.md
egile_researcher/: __init__.py  agent.py  ai_agent.py  client.py  config.py  exceptions.py  intelligent_agent.py  mcp_client.py  server.py
examples/: README.md  ai_research_simple.py  basic_research.py  test_researcher.py
